--- a/index.html
+++ b/index.html
@@ -562,9 +562,9 @@ research and develop advanced deep learning algorithms for image and video enhan
               Xin Jin,  Linghao Han, Zhen Li, Zhi Chai, Chunle Guo, and <b>Chongyi Li</b>.
                 <br>
                 <span class="links">
-                    <a href="">PDF</a>| 
-		    <a href="">Project Page</a>| 	
-                    <a href="">Code</a>
+                    <a href="https://openaccess.thecvf.com/content/CVPR2023/papers/Jin_DNF_Decouple_and_Feedback_Network_for_Seeing_in_the_Dark_CVPR_2023_paper.pdf">PDF</a>| 
+		    <a href="https://github.com/Srameo/DNF">Project Page</a>| 	
+                    <a href="https://github.com/Srameo/DNF">Code</a>
                 </span>
             </p>
           </div>
@@ -586,7 +586,7 @@ research and develop advanced deep learning algorithms for image and video enhan
               Ruiqi Wu,  Zhengpeng Duan, Chunle Guo, Zhi Chai, and <b>Chongyi Li</b>.
                 <br>
                 <span class="links">
-                    <a href="">PDF</a>| 
+                    <a href="https://openaccess.thecvf.com/content/CVPR2023/papers/Wu_RIDCP_Revitalizing_Real_Image_Dehazing_via_High-Quality_Codebook_Priors_CVPR_2023_paper.pdf">PDF</a>| 
 		    <a href="https://rq-wu.github.io/projects/RIDCP/index.html">Project Page</a>| 	
                     <a href="https://github.com/RQ-Wu/RIDCP_dehazing">Code</a>
                 </span>
@@ -617,9 +617,9 @@ research and develop advanced deep learning algorithms for image and video enhan
               Yuhui Wu, Chen Pan, Guoqing Wang, Yang Yang, Jiwei Wei, <b>Chongyi Li</b>, and Hengtao Shen.
                 <br>
                 <span class="links">
-                    <a href="">PDF</a>| 
-		    <a href="">Project Page</a>| 	
-                    <a href="">Code</a>
+                    <a href="https://openaccess.thecvf.com/content/CVPR2023/papers/Wu_Learning_Semantic-Aware_Knowledge_Guidance_for_Low-Light_Image_Enhancement_CVPR_2023_paper.pdf">PDF</a>| 
+		    <a href="https://github.com/langmanbusi/Semantic-Aware-Low-Light-Image-Enhancement">Project Page</a>| 	
+                    <a href="https://github.com/langmanbusi/Semantic-Aware-Low-Light-Image-Enhancement">Code</a>
                 </span>
             </p>
           </div>
@@ -642,9 +642,9 @@ research and develop advanced deep learning algorithms for image and video enhan
              Ruicheng Feng, <b>Chongyi Li</b>, Huaijin Chen, Shuai Li, Jinwei Gu, and Chen Change Loy.
                 <br>
                 <span class="links">
-                    <a href="">PDF</a>| 
-		    <a href="">Project Page</a>| 	
-                    <a href="">Code</a>
+                    <a href="https://openaccess.thecvf.com/content/CVPR2023/papers/Feng_Generating_Aligned_Pseudo-Supervision_From_Non-Aligned_Data_for_Image_Restoration_in_CVPR_2023_paper.pdf">PDF</a>| 
+		    <a href="https://jnjaby.github.io/projects/AlignFormer/">Project Page</a>| 	
+                    <a href="https://github.com/jnjaby/AlignFormer">Code</a>
                 </span>
             </p>
           </div>
@@ -768,7 +768,7 @@ research and develop advanced deep learning algorithms for image and video enhan
               <b>Chongyi Li</b>, Chunle Guo, Shangchen Zhou, Qiming Ai, Ruicheng Feng, and Chen Change Loy.
                 <br>
                 <span class="links">
-                    <a href="">PDF</a>| 
+                    <a href="https://openaccess.thecvf.com/content/CVPR2023W/NTIRE/papers/Li_FlexiCurve_Flexible_Piecewise_Curves_Estimation_for_Photo_Retouching_CVPRW_2023_paper.pdf">PDF</a>| 
 		    <a href="https://li-chongyi.github.io/FlexiCurve">Project Page</a>| 	
                     <a href="https://li-chongyi.github.io/FlexiCurve">Code</a>
                 </span>
@@ -845,7 +845,7 @@ research and develop advanced deep learning algorithms for image and video enhan
               Keyu Yan, Man Zhou, Jie Huang, Chengjun Xie, Feng Zhao, <b>Chongyi Li</b>, Danfeng Hong.
                 <br>
                 <span class="links">
-                    <a href="">PDF</a>| 
+                    <a href="https://arxiv.org/abs/2210.08181">PDF</a>| 
 		    <a href="">Project Page</a>| 	
                     <a href="">Code</a>
                 </span>
@@ -947,9 +947,9 @@ research and develop advanced deep learning algorithms for image and video enhan
                Man Zhou, Jie Huang, <b>Chongyi Li<sup>+</sup></b>, Hu Yu, Keyu Yan, Naishan Zheng, and Feng Zhao.
                 <br>
                 <span class="links">
-                    <a href="">PDF</a>| 
-		    <a href="">Project Page</a>| 	
-                    <a href="">Code</a>
+                    <a href="https://dl.acm.org/doi/abs/10.1145/3503161.3547924">PDF</a>| 
+		    <a href="https://github.com/manman1995/pansharpening">Project Page</a>| 	
+                    <a href="https://github.com/manman1995/pansharpening">Code</a>
                 </span>
             </p>
           </div>
@@ -970,9 +970,9 @@ research and develop advanced deep learning algorithms for image and video enhan
                Man Zhou,  Jie Huang, Keyu Yan, Gang Yang, Aiping Liu, <b>Chongyi Li</b>, and Feng Zhao.
                 <br>
                 <span class="links">
-                    <a href="">PDF</a>| 
-		    <a href="">Project Page</a>| 	
-                    <a href="">Code</a>
+                    <a href="https://dl.acm.org/doi/abs/10.1145/3503161.3547774">PDF</a>| 
+		    <a href="https://github.com/manman1995/pansharpening">Project Page</a>| 	
+                    <a href="https://github.com/manman1995/pansharpening">Code</a>
                 </span>
             </p>
           </div>
@@ -1041,7 +1041,7 @@ research and develop advanced deep learning algorithms for image and video enhan
               Runmin Cong, Qinwei Lin, Chen Zhang, <b>Chongyi Li<sup>+</sup></b>, Xiaochun Cao, Qingming Huang, and Yao Zhao.
                 <br>
                 <span class="links">
-                    <a href="">PDF</a>| 
+                    <a href="https://arxiv.org/abs/2210.02843">PDF</a>| 
 		    <a href="https://rmcong.github.io/proj_CIRNet.html">Project Page</a>| 	
                     <a href="https://github.com/rmcong/CIRNet_TIP2022">Code</a>	
                 </span>
