--- a/index.html
+++ b/index.html
@@ -1618,6 +1618,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Honors & Awards:</h2>
 
 <ul>
+<li><a href="https://www.sdxz2050.com/32165.html">WAIC Youth Outstanding Paper Award Honorable Mention, 2023</a></li>
 <li>IEEE Signal Processing Society's top-25 most downloaded articles on IEEE Xplore®, Sept. 2021 - Sept. 2022.
 <li>Pattern Recognition (Elsevier Journal) <a href="./PDF/PR_honorable mention_2020.pdf">(Best Paper Honourable Mention)</a></li>
 <li>Engineering Applications of Artificial Intelligence (Elsevier Journal) <a href="./PDF/EAAI_IFAC_prize_2023_application.pdf">(Paper Prize Award 2023 - Application)</a></li>
