--- a/index.html
+++ b/index.html
@@ -1666,7 +1666,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 2023/01- : IEEE Transactions on Circuits and Systems for Video Technology (IF: 5.859)</br>
 2022/05- : IEEE Journal of Oceanic Engineering (IF: 3.554)</br>
 2022/01- : Neurocomputing (IF: 5.719)</br>
-2021/01- : Springer Journal of Signal, Image and Video Processing (IF: 1.794)</br> 
+2021/01-2023/10: Springer Journal of Signal, Image and Video Processing (IF: 1.794)</br> 
 
 <br><strong>Guest Editor</strong></br>
 International Journal of Computer Vision (Lead Guest Editor) (IF: 13.369)</br>
