--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ li, ul {font-weight: normal;}
 
   
 <p>
-<small>📍 ABN-02b-11, NTU, SG</small><br>
+<small>📍 Nankai, Tianjin, China</small><br>
 <small>📧lichongyi25 at gmail.com</small><br>
 <small>📧lichongyi at nankai.edu.cn</small><br>
 	
@@ -92,7 +92,7 @@ li, ul {font-weight: normal;}
 
 <hr />
 </p>
- 
+ <!--
 	  <div class="publication">
            <img src="./logo/IJCV.png" class="publogo" width="300 px">
             <p> 
@@ -117,7 +117,7 @@ li, ul {font-weight: normal;}
 	<br />
 	<br />
 	<br />
-
+-->
 
 
 
@@ -164,6 +164,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
  
 <ul>
+<li> 2023/12 --荣获中国图象图形学学会自然科学二等奖</strong>. 
 <li> 2023/10 --I am homored to be recognised as the <strong>World’s Top 2% Scientists (2023)</strong>. 
 <li> 2023/10 --3 papers (including one spotlight paper) got accepted by <strong>NeurIPS 2023</strong>.</li>
 <li> 2023/09 --Two papers have been recognized as <strong>ESI Hot Paper</strong></li> 
@@ -1620,6 +1621,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Honors & Awards:</h2>
 
 <ul>
+<li><a href="https://mp.weixin.qq.com/s/-3uuAGz5Lb6SFIIrIWUD7Q">中国图象图形学学会自然科学二等奖</a></li>
 <li><a href="https://www.sdxz2050.com/32165.html">WAIC Youth Outstanding Paper Award Honorable Mention, 2023</a></li>
 <li>IEEE Signal Processing Society's top-25 most downloaded articles on IEEE Xplore®, Sept. 2021 - Sept. 2022.
 <li>Pattern Recognition (Elsevier Journal) <a href="./PDF/PR_honorable mention_2020.pdf">(Best Paper Honourable Mention)</a></li>
