--- a/sub_publication.html
+++ b/sub_publication.html
@@ -51,10 +51,17 @@
 <ol>
 <li> <strong>Chongyi Li</strong>, Chunle Guo, Ruicheng Feng, Shangchen Zhou, and Chen Change Loy, <strong>CuDi: Curve Distillation for Efficient and Controllable Exposure Adjustment</strong>. <a href="https://arxiv.org/pdf/2207.14273.pdf" target="_blank"><font color="#1C86EE">[PDF-arXiv version]</font></a> <a href="https://li-chongyi.github.io/CuDi_files/" target="_blank"><font color="#1C86EE">[Project]</font></a></li> 
 <li> Saeed Anwar, Muhammad Tahir, <strong>Chongyi Li</strong>, et al., <strong>Image Colorization: A Survey and Dataset</strong>. <a href="https://arxiv.org/pdf/2008.10774.pdf" target="_blank"><font color="#1C86EE">[PDF--arXiv Version]</font></a><a href="https://github.com/saeed-anwar/ColorSurvey" target="_blank"><font color="#1C86EE">[Project]</font></a></li> 
-
 </ol> 
   
 
+<h4>
+<a id="publications-J-pages" class="anchor" href="#publications-J-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>2024:</h4>
+
+<ol>
+<li> Chunle Guo, Ruiqi Wu, Xin Jin, Linghao Han, Zhi Chai, Weidong Zhang, and <strong>Chongyi Li<sup>+</sup></strong>, Underwater Ranker: Learn Which Is Better and How to Be Better, <strong><ud2>AAAI Conference on Artificial Intelligence (AAAI)</ud2></strong>, 2023. <a href="https://arxiv.org/pdf/2208.06857.pdf" target="_blank"><font color="#1C86EE">[PDF-arXiv version]</font></a><a href="https://li-chongyi.github.io/URanker_files/" target="_blank"><font color="#1C86EE">[Project]</font></a><font color="#ff0000">[Oral]</font></li>  
+</ol> 
+
+ 
 <h4>
 <a id="publications-J-pages" class="anchor" href="#publications-J-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>2023:</h4>
 
