--- a/sub_publication.html
+++ b/sub_publication.html
@@ -58,7 +58,7 @@
 <a id="publications-J-pages" class="anchor" href="#publications-J-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>2024:</h4>
 
 <ol>
-<li> Chunle Guo, Ruiqi Wu, Xin Jin, Linghao Han, Zhi Chai, Weidong Zhang, and <strong>Chongyi Li<sup>+</sup></strong>, Underwater Ranker: Learn Which Is Better and How to Be Better, <strong><ud2>AAAI Conference on Artificial Intelligence (AAAI)</ud2></strong>, 2023. <a href="https://arxiv.org/pdf/2208.06857.pdf" target="_blank"><font color="#1C86EE">[PDF-arXiv version]</font></a><a href="https://li-chongyi.github.io/URanker_files/" target="_blank"><font color="#1C86EE">[Project]</font></a><font color="#ff0000">[Oral]</font></li>  
+<li> Jingchun Zhou, Zongxin He, Kin-Man Lam, Yudong Wang, Chunle Guo, and <strong>Chongyi Li<sup>+</sup></strong>, AMSP-UOD: When Vortex Convolution and Stochastic Perturbation Meet Underwater Object Detection, <strong><ud2>AAAI Conference on Artificial Intelligence (AAAI)</ud2></strong>, 2024. <a href="https://arxiv.org/abs/2308.11918" target="_blank"><font color="#1C86EE">[PDF-arXiv version]</font></a><a href=" " target="_blank"><font color="#1C86EE">[Project]</font></a><font color="#ff0000">[Oral]</font></li>  
 </ol> 
 
  
