--- a/sub_publication.html
+++ b/sub_publication.html
@@ -58,8 +58,8 @@
 <a id="publications-J-pages" class="anchor" href="#publications-J-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>2024:</h4>
 
 <ol>
-<li> Jingchun Zhou, Zongxin He, Kin-Man Lam, Yudong Wang, Chunle Guo, and <strong>Chongyi Li<sup>+</sup></strong>, AMSP-UOD: When Vortex Convolution and Stochastic Perturbation Meet Underwater Object Detection, <strong><ud2>AAAI Conference on Artificial Intelligence (AAAI)</ud2></strong>, 2024. <a href="https://arxiv.org/abs/2308.11918" target="_blank"><font color="#1C86EE">[PDF-arXiv version]</font></a><a href=" " target="_blank"><font color="#1C86EE">[Project]</font></a><font color="#ff0000">[Oral]</font></li>  
-<li> Dehuan Zhang, Jingchun Zhou, <strong>Chongyi Li</strong>, Chunle Guo, and Weishi Zhang, Synergistic Multiscale Detail Refinement via Intrinsic Supervision for Underwater Image Enhancement, <strong><ud2>AAAI Conference on Artificial Intelligence (AAAI)</ud2></strong>, 2024. <a href="https://arxiv.org/abs/2308.11932" target="_blank"><font color="#1C86EE">[PDF-arXiv version]</font></a><a href=" " target="_blank"><font color="#1C86EE">[Project]</font></a><font color="#ff0000">[Oral]</font></li>  
+<li> Jingchun Zhou, Zongxin He, Kin-Man Lam, Yudong Wang, Chunle Guo, and <strong>Chongyi Li<sup>+</sup></strong>, AMSP-UOD: When Vortex Convolution and Stochastic Perturbation Meet Underwater Object Detection, <strong><ud2>AAAI Conference on Artificial Intelligence (AAAI)</ud2></strong>, 2024. <a href="https://arxiv.org/abs/2308.11918" target="_blank"><font color="#1C86EE">[PDF-arXiv version]</font></a><a href=" " target="_blank"><font color="#1C86EE">[Project]</font></a></li>  
+<li> Dehuan Zhang, Jingchun Zhou, <strong>Chongyi Li</strong>, Chunle Guo, and Weishi Zhang, Synergistic Multiscale Detail Refinement via Intrinsic Supervision for Underwater Image Enhancement, <strong><ud2>AAAI Conference on Artificial Intelligence (AAAI)</ud2></strong>, 2024. <a href="https://arxiv.org/abs/2308.11932" target="_blank"><font color="#1C86EE">[PDF-arXiv version]</font></a><a href=" " target="_blank"><font color="#1C86EE">[Project]</font></a></li>  
 </ol> 
 
  
