--- a/sub_publication.html
+++ b/sub_publication.html
@@ -256,7 +256,8 @@
 <li> <strong>China Patent</strong> ZL 2016 1 0244589.9 <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/%E5%8F%91%E6%98%8E%E4%B8%93%E5%88%A9%E8%AF%81%E4%B9%A6_%E4%B8%80%E7%A7%8D%E7%AB%8B%E4%BD%93%E8%A7%86%E8%A7%89%E6%98%BE%E8%91%97%E6%80%A7%E6%A3%80%E6%B5%8B%E6%96%B9%E6%B3%95.pdf" target="_blank"><font color="#1C86EE">[PDF]</font></a> </li>
 <li> <strong>China Patent</strong> ZL 2018 1 0879724.6 <a href="PDF/201810879724.6.pdf" target="_blank"><font color="#1C86EE">[PDF]</font></a> </li>
 <li> <strong>China Patent</strong> ZL 2020 1 0199264.X <a href="PDF/一种RGB-D图像显著性目标检测方法-专利号：202010199264X.pdf" target="_blank"><font color="#1C86EE">[PDF]</font></a> </li>
-  
+<li> <strong>China Patent</strong> ZL 2020 1 0070635.4 <a href="PDF/一种RGB-D图像显著性目标获取的方法，专利号：ZL 202010070635.4.pdf" target="_blank"><font color="#1C86EE">[PDF]</font></a> </li>
+    
 </ol>
 </div>
 
