--- a/index.html
+++ b/index.html
@@ -164,6 +164,8 @@ research and develop advanced deep learning algorithms for image and video enhan
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
  
 <ul>
+<li> 2024/01 --One paper got accepted by <strong>IJCV</strong>. </li> 
+<!--
 <li> 2023/12 --2 papers got accepted by <strong>AAAI 2024</strong>.</li>
 <li> 2023/12 --荣获中国图象图形学学会自然科学二等奖</strong>. 
 <li> 2023/10 --I am homored to be recognised as the <strong>World’s Top 2% Scientists (2023)</strong>. 
@@ -197,7 +199,6 @@ research and develop advanced deep learning algorithms for image and video enhan
 <li> 2023/01 --Excited to announce one paper has been accepted by ICLR 2023 as <strong>Oral, notable-top-5%</strong>!</li>
 <li> 2023/01 --Excited to announce one paper has been accepted by AAAI 2023 as <strong>Oral</strong>!</li>
 <li> 2023/01 --I am nominated with honor to serve as an <strong>Associate Editor</strong> of IEEE Transactions on Circuits and Systems for Video Technology (IF: 5.859).</strong></li>
-<!--
 <li> 2022/12 --Thrilled that our workshop "2nd mobile intelligent photography and imaging (MIPI)" got accetped to <strong>CVPR 2023</strong>! https://mipi-challenge.org/MIPI2023/.</li> 
 <li> 2022/12 --Two papers have been recognized as <strong>ESI Highly Cited Paper</strong></li> 
 <li> 2022/11 --One paper got accepted by <strong>AAAI 2023</strong>. The code is released. </li>
