--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@ research and develop advanced deep learning algorithms for image and video enhan
  
 <ul>
 <li> 2024/01 --One paper got accepted by <strong>IJCV</strong>. </li> 
+<li> 2024/01 --I am nominated with honor to serve as an <strong>Associate Editor</strong> of TNNLS (IF: 10.4).</strong></li>
 <!--
 <li> 2023/12 --2 papers got accepted by <strong>AAAI 2024</strong>.</li>
 <li> 2023/12 --荣获中国图象图形学学会自然科学二等奖</strong>. 
@@ -1667,6 +1668,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 
 
 <br><strong>Associate Editor</strong></br>
+2024/01- : IEEE Transactions on Neural Networks and Learning Systems (IF: 10.4)</br>
 2023/01- : IEEE Transactions on Circuits and Systems for Video Technology (IF: 5.859)</br>
 2022/05- : IEEE Journal of Oceanic Engineering (IF: 3.554)</br>
 2022/01- : Neurocomputing (IF: 5.719)</br>
