--- a/sub_publication.html
+++ b/sub_publication.html
@@ -60,6 +60,7 @@
 <ol>
 <li> Jingchun Zhou, Zongxin He, Kin-Man Lam, Yudong Wang, Chunle Guo, and <strong>Chongyi Li<sup>+</sup></strong>, AMSP-UOD: When Vortex Convolution and Stochastic Perturbation Meet Underwater Object Detection, <strong><ud2>AAAI Conference on Artificial Intelligence (AAAI)</ud2></strong>, 2024. <a href="https://arxiv.org/abs/2308.11918" target="_blank"><font color="#1C86EE">[PDF-arXiv version]</font></a><a href=" " target="_blank"><font color="#1C86EE">[Project]</font></a></li>  
 <li> Dehuan Zhang, Jingchun Zhou, Chunle Guo, Weishi Zhang, and <strong>Chongyi Li</strong>,  Synergistic Multiscale Detail Refinement via Intrinsic Supervision for Underwater Image Enhancement, <strong><ud2>AAAI Conference on Artificial Intelligence (AAAI)</ud2></strong>, 2024. <a href="https://arxiv.org/abs/2308.11932" target="_blank"><font color="#1C86EE">[PDF-arXiv version]</font></a><a href=" " target="_blank"><font color="#1C86EE">[Project]</font></a></li>  
+<li> J. Zhou, J. Sun,  <strong>C. Li<sup>+</sup></strong>, Q. Jiang, M. Zhou, K. M. Lam, W. Zhang, and X. Fu, HCLR-Net: Hybrid Contrastive Learning Regularization with Locally Randomized Perturbation for Underwater Image Enhancement, <strong><ud2>International Journal of Computer Vision</ud2></strong>, 2024. <a href="" target="_blank"><font color="#1C86EE">[PDF-arXiv version]</font></a><a href=" " target="_blank"><font color="#1C86EE">[Project]</font></a></li>
 </ol> 
 
  
