--- a/sub_publication.html
+++ b/sub_publication.html
@@ -49,6 +49,7 @@
 <a id="publications-J-pages" class="anchor" href="#publications-J-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Preprint:</h4>
 
 <ol>
+<li> Xinni Jiang, Zengsheng Kuang, Chunle Guo, Ruixuan Zhang, Lei Cai, Xiao Fan, and <strong>Chongyi Li</strong>, <strong>The Devil is in the Details: Boosting Guided Depth Super-Resolution via Rethinking Cross-Modal Alignment and Aggregation</strong>. <a href="" target="_blank"><font color="#1C86EE">[PDF-arXiv version]</font></a> <a href="" target="_blank"><font color="#1C86EE">[Project]</font></a></li> 
 <li> <strong>Chongyi Li</strong>, Chunle Guo, Ruicheng Feng, Shangchen Zhou, and Chen Change Loy, <strong>CuDi: Curve Distillation for Efficient and Controllable Exposure Adjustment</strong>. <a href="https://arxiv.org/pdf/2207.14273.pdf" target="_blank"><font color="#1C86EE">[PDF-arXiv version]</font></a> <a href="https://li-chongyi.github.io/CuDi_files/" target="_blank"><font color="#1C86EE">[Project]</font></a></li> 
 <li> Saeed Anwar, Muhammad Tahir, <strong>Chongyi Li</strong>, et al., <strong>Image Colorization: A Survey and Dataset</strong>. <a href="https://arxiv.org/pdf/2008.10774.pdf" target="_blank"><font color="#1C86EE">[PDF--arXiv Version]</font></a><a href="https://github.com/saeed-anwar/ColorSurvey" target="_blank"><font color="#1C86EE">[Project]</font></a></li> 
 </ol> 
