--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 <li> 2024/01 --One paper got accepted by <strong>IJCV</strong>. </li> 
 <li> 2024/01 --I am nominated with honor to serve as an <strong>Associate Editor</strong> of TNNLS (IF: 10.4).</strong></li>
 <!--
-<li> 2023/12 --2 papers got accepted by <strong>AAAI 2024</strong>.</li>
+<!--<li> 2023/12 --2 papers got accepted by <strong>AAAI 2024</strong>.</li>-->
 <li> 2023/12 --荣获中国图象图形学学会自然科学二等奖</strong>. 
 <li> 2023/10 --I am homored to be recognised as the <strong>World’s Top 2% Scientists (2023)</strong>. 
 <li> 2023/10 --3 papers (including one spotlight paper) got accepted by <strong>NeurIPS 2023</strong>.</li>
