--- a/index.html
+++ b/index.html
@@ -124,6 +124,9 @@ li, ul {font-weight: normal;}
 
 <h2>
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Open Positions:</h2>
+<br><p><font color="blue">I am looking for several Postdoctoral Fellows at Nankai University (work in Tianjin or Shenzhen) The application deadline is 11 March 2024. If you wanna have a try, please drop me an email. </font></p></br>
+</ul>
+<br>	
 <br><p><font color="blue">I am looking for PhD students and Master students who want to conduct
 research and develop advanced deep learning algorithms for image and video enhancement and restoration, computational imaging, and image signal processor to join my research group at Nankai University (2023 Fall or 2024 Fall). I am also recruiting Research Associates and Final Year Project students.</font></p></br>
 </ul>
