--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ li, ul {font-weight: normal;}
 
 <h2>
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Open Positions:</h2>
-<br><p><font color="red">I am looking for several Postdoctoral Fellows at Nankai University (work in Tianjin or Shenzhen) The application deadline is 11 March 2024. If you wanna have a try, please drop me an email. </font></p></br>
+<br><p><font color="red">I am looking for several Postdoctoral Fellows at Nankai University (work in Tianjin or Shenzhen). The application deadline is 11 March 2024. If you wanna have a try, please drop me an email. </font></p></br>
 </ul>
 <br>	
 <br><p><font color="blue">I am looking for PhD students and Master students who want to conduct
