--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@ li> 2023/12 --2 papers got accepted by <strong>AAAI 2024</strong>.</li>
 		  <br> 
 		<em><b>ICML, 2023 <a href="" target="_blank"><font color="#ff0000">[Oral]</font></a></b></em>
                 <br> 
-              Man Zhou, Jie Huang, Chunle Guo, and <b>Chongyi Li<sup>+</sup></b>.
+              Man Zhou, Jie Huang, Chunle Guo, and <b>Chongyi Li</b>.
                 <br>
                 <span class="links">
                     <a href="https://icml.cc/virtual/2023/oral/25538">PDF</a>| 
