--- a/index.html
+++ b/index.html
@@ -1495,7 +1495,7 @@ li> 2023/12 --2 papers got accepted by <strong>AAAI 2024</strong>.</li>
 <hr />
 -->
 
-
+<!--
 <h2>
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Events:</h2>  
 
@@ -1595,9 +1595,8 @@ li> 2023/12 --2 papers got accepted by <strong>AAAI 2024</strong>.</li>
 </ul>
 <br>
 <hr />
-
-	
-	
+-->	
+<!--
  <h2>
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Honors & Awards:</h2>
 
@@ -1635,7 +1634,9 @@ li> 2023/12 --2 papers got accepted by <strong>AAAI 2024</strong>.</li>
 <br>
 <hr /> 
 
-
+-->
+		 
+<!--
  <h2>
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Professional Service:</h2>
 
@@ -1649,7 +1650,7 @@ li> 2023/12 --2 papers got accepted by <strong>AAAI 2024</strong>.</li>
 2024/01- : IEEE Transactions on Neural Networks and Learning Systems (IF: 10.4)</br>
 2023/01- : IEEE Transactions on Circuits and Systems for Video Technology (IF: 5.859)</br>
 2022/05- : IEEE Journal of Oceanic Engineering (IF: 3.554)</br>
-2022/01- : Neurocomputing (IF: 5.719)</br>
+2022/01-2024/01 : Neurocomputing (IF: 5.719)</br>
 2021/01-2023/10: Springer Journal of Signal, Image and Video Processing (IF: 1.794)</br> 
 
 <br><strong>Guest Editor</strong></br>
@@ -1692,7 +1693,7 @@ AAAI 2022, 2023, 2024</br>
 </ul>
 <br>
 <hr />    
-
+-->
 
 <!--
  <h2>
