--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ li, ul {font-weight: normal;}
 	
 	
 <p class="view"><a href="https://li-chongyi.github.io/">Homepage</a></p>
-<p class="view"><a href="sub_publication.html">Publications</a></p>
+<!--<<p class="view"><a href="sub_publication.html">Publications</a></p>-->
 <p class="view"><a href="datasets.html">Datasets</a></p>
 
 	
