--- a/index.html
+++ b/index.html
@@ -1610,25 +1610,24 @@ li> 2023/12 --2 papers got accepted by <strong>AAAI 2024</strong>.</li>
 <li><strong>World’s Top 2% Scientists (2023)</strong>. It is compiled by Stanford University based on the standardized citation indicators (Table_1_Authors_singleyr_2022_pubs_since_1788_wopp_extracted_202209), which is available online at <a href="https://elsevier.digitalcommonsdata.com/datasets/btchxktzyw/5" target="_blank"><font color="#ff0000">Mendeley Database.</font></a></li>
 <li><strong>World’s Top 2% Scientists (2022)</strong>. It is compiled by Stanford University based on the standardized citation indicators (Table_1_Authors_singleyr_2021_pubs_since_1788_wopp_extracted_202209), which is available online at <a href="https://elsevier.digitalcommonsdata.com/datasets/btchxktzyw/4" target="_blank"><font color="#ff0000">Mendeley Database.</font></a></li>
 <li><strong>World’s Top 2% Scientists (2021)</strong>. It is compiled by Stanford University based on the standardized citation indicators (Table_1_Authors_singleyr_2020_wopp_extracted_202108), which is available online at <a href="https://elsevier.digitalcommonsdata.com/datasets/btchxktzyw/3" target="_blank"><font color="#ff0000">Mendeley Database.</font></a></li>
-<!--<<li>2021 Innovation in Information Technology Application and Artificial Intelligent Academic Forum for Post-doctoral Talents, Tianjin, China. Runners-up Award. <a href="PDF/postdoc_runner-up.jpg"  target="_blank">PDF</a></li>-->
+<li>2021 Innovation in Information Technology Application and Artificial Intelligent Academic Forum for Post-doctoral Talents, Tianjin, China. Runners-up Award. <a href="PDF/postdoc_runner-up.jpg"  target="_blank">PDF</a></li>
 <li>Sihao's project is awarded the <strong>2021 Global Undergraduate Awards</strong> for his entry 'Learning to See in the Dark - Low Light Image Enhancement'.  <a href="https://undergraduateawards.com/" target="_blank"><font color="#ff0000">[The Global Undergraduate Awards]</font></a><a href="https://www.ntu.edu.sg/scse/news-events/news/detail/scse-s-chen-sihao-(computer-science-year-4)-makes-a-historical-first-win-at-the-global-undergraduate-awards-2021" target="_blank"><font color="#ff0000">[NTU News]</font></a>Co-supervised with Cavan</li>
 <li>CVPR (Outstanding Reviewer in 2023). <a href="https://cvpr2023.thecvf.com/Conferences/2023/OutstandingReviewers"  target="_blank">PDF</a></li>
 <li>ECCV (Outstanding Reviewer in 2022). <a href="https://eccv2022.ecva.net/program/outstanding-reviewers/"  target="_blank">PDF</a></li>
 <li>ICCV (Outstanding Reviewer in 2021). <a href="http://iccv2021.thecvf.com/outstanding-reviewers"  target="_blank">PDF</a></li>
 <li>CVPR (Outstanding Reviewer in 2021). <a href="http://cvpr2021.thecvf.com/node/184"  target="_blank">PDF</a></li>
 <li>IEEE Journal of Oceanic Engineering (Outstanding Reviewer in 2021) <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9756533">News</a></li>
-<!--<<li>6th, NTIRE 2021 Challenge on Non-Homogeneous Image Dehazing, 2021. <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/NTIRE2021_NonHomogeneous_Dehazing_Report_compressed.pdf" target="_blank">PDF</a></li>-->
-<!--<<li>2020 National Postdoctoral Forum on the Development and Application of Artificial Intelligence, Tianjin, China. Excellence Award. <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/%E5%8D%9A%E5%90%8E%E4%BC%98%E7%A7%80%E5%A5%96.pdf">PDF</a></li>-->
+<<li>6th, NTIRE 2021 Challenge on Non-Homogeneous Image Dehazing, 2021. <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/NTIRE2021_NonHomogeneous_Dehazing_Report_compressed.pdf" target="_blank">PDF</a></li>
+<li>2020 National Postdoctoral Forum on the Development and Application of Artificial Intelligence, Tianjin, China. Excellence Award. <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/%E5%8D%9A%E5%90%8E%E4%BC%98%E7%A7%80%E5%A5%96.pdf">PDF</a></li>
 <li>Distinguished Dissertation Award of Beijing Society of Image and Graphics, 2018. <a href="http://www.bsig.org.cn/detail/2316">Media</a></li> 
-
-<!--<li>Bohai Securities Fellowship, 2017.</li>
+<li>Bohai Securities Fellowship, 2017.</li>
 <li>"Outstanding Graduate Student" in Tianjin University, 2018.
 <li>"Merit Student" in Tianjin University, 2017.</li> 
 <li>"Advanced Individual" in the creative working, 2017.</li>
 <li>China Scholarship Council (CSC) scholarships, 2016.</li>
 <li>The First Class Academic Scholarship in Tianjin University, 2015, 2016.</li><embed src="https://sumanbogati.github.io/sample.pdf" type="application/pdf" />
 <li>"Advanced Individual" in international exchange, 2015.</li>
-<li>"Advanced Individual" in the creative working, 2015.</li>-->
+<li>"Advanced Individual" in the creative working, 2015.</li
 
 </ul>
 <br>
@@ -1673,7 +1672,7 @@ IEEE Workshop on Multimedia Signal Processing (MMSP) 2022</br>
 
 <br><strong>Senior Program Committee (Meta-Reviewers)</strong></br>
 AAAI 2022, 2023, 2024</br>
-<!--
+
 <br><strong>Reviewer</strong></br>
 <li><strong>IEEE</strong>:</li>TPAMI, TIP, TCyber, TCSVT, TNNLS, TMM, TB, TIM, TGARS, TITS, TCSVT II: Express Briefs, ACCESS, SPL, JOE, JBHI, J-STARS, MultiMedia
 
