--- a/index.html
+++ b/index.html
@@ -1668,7 +1668,7 @@ BMVC 2022</br>
 2nd CVPR Workshop on Mobile Intelligent Photography & Imaging (MIPI) 2023</br>
 1st ECCV Workshop on Mobile Intelligent Photography & Imaging (MIPI) 2022</br>
 IEEE Workshop on Multimedia Signal Processing (MMSP) 2022</br>
-<!--Asia-Pacific Signal and Information Processing Association Annual Summit and Conference (APSIPA ASC) 2019</br>-->
+Asia-Pacific Signal and Information Processing Association Annual Summit and Conference (APSIPA ASC) 2019</br>
 
 <br><strong>Senior Program Committee (Meta-Reviewers)</strong></br>
 AAAI 2022, 2023, 2024</br>
@@ -1687,7 +1687,7 @@ AAAI 2022, 2023, 2024</br>
 <li><strong>SPIE</strong>:</li> JEI
 
 <li><strong>Conference</strong>:</li>ICPR 2018; ACM MM 2019;ICME 2020; ACM MM2020; MICCAI 2020; AAAI 2021; CVPR 2021; IJCAI 2021;ICME 2021; MICCAI 2021; ACM MM2021; ICCV2021; NeurIPS2021; ICLR2022; CVPR2022
--->
+
 
 </ul>
 <br>
