--- a/index.html
+++ b/index.html
@@ -1281,7 +1281,7 @@ li> 2023/12 --2 papers got accepted by <strong>AAAI 2024</strong>.</li>
 		    <br>
 		 <em><b>TIP, 2020 <a href="" target="_blank"><font color="#ff0000">[ESI Hot Paper & ESI Highly Cited Paper & TIP Popular Articles & SPS Top-25 Downloaded Articles]</font></a></b></em>
                 <br>
-                <b>Chongyi Li</b>, Chunle Guo, Wenqi Ren, et al.
+                <b>Chongyi Li</b>, Chunle Guo, et al.
                 <br>
                 <span class="links">
                     <a href="https://ieeexplore.ieee.org/document/8917818">PDF</a>| 
