--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@ li, ul {font-weight: normal;}
 <small>📧lichongyi at nankai.edu.cn</small><br>
 	
 <a href="https://github.com/Li-Chongyi/" target="_blank">[GitHub]</a>  
-<a href="http://dblp.uni-trier.de/pers/hd/l/Li:Chongyi" target="_blank">[DBLP]</a>  <br>
-<a href="https://scholar.google.com/citations?user=1_I0P-AAAAAJ&hl=en" target="_blank">[Google Scholar]</a> <br>
+<!--<a href="http://dblp.uni-trier.de/pers/hd/l/Li:Chongyi" target="_blank">[DBLP]</a>  <br>-->
+<!--<a href="https://scholar.google.com/citations?user=1_I0P-AAAAAJ&hl=en" target="_blank">[Google Scholar]</a> <br>-->
 </p> <br>
 	
 	
@@ -83,7 +83,7 @@ li, ul {font-weight: normal;}
 <a id="Biography-page" class="anchor" href="#biography-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to Chongyi Li (李重仪)'s Homepage</h2>
 <div style="text-align: justify; display: block; margin-right: auto;">
 <p>
-<br><strong>2023/07 - </strong>I am a Full Professor and lead the <a href="https://pi-lab.xyz"><font color="#1C86EE"> Photography &amp Imaging (&#960) Research Group</font></a> at the School of Computer Science, Nankai University, China.</br>
+<br><strong>2023/07 - </strong>I am a Full Professor at Nankai University, China.</br>
 <br><strong>2021/10 - 2023/07</strong>, I was a Research Assistant Professor at the School of Computer Science and Engineering, Nanyang Technological University (NTU), Singapore.</br>
 <br><strong>2020/01 - 2021/10</strong>, I was a research fellow at the <a href="https://www.mmlab-ntu.com/"><font color="#1C86EE"> MMLab@NTU</font></a>, <a href="https://www.ntu.edu.sg/s-lab/our-people"><font color="#1C86EE"> S-Lab</font></a>, and worked with Dr.<a href="http://personal.ie.cuhk.edu.hk/~ccloy/index.html"><font color="#1C86EE"> Chen Change Loy</font></a>,  School of Computer Science and Engineering, Nanyang Technological University (NTU), Singapore.</br>
 <br><strong>2018/10 - 2020/01</strong>, I was a postdoctoral fellow and worked with Chair Prof. <a href="http://www.cs.cityu.edu.hk/~cssamk/research_group/index.html"><font color="#1C86EE">Sam Kwong</font></a> (IEEE Fellow), Department of Computer Science, City University of Hong Kong (CityU), Kowloon, Hong Kong.</br>
@@ -372,116 +372,8 @@ li> 2023/12 --2 papers got accepted by <strong>AAAI 2024</strong>.</li>
 	<br />
 	<br />
 
-<!--
-		  <div class="publication">
-            <img src="logo/pansharpICCV2023_logo.png" onmouseover="this.src='logo/pansharpICCV2023_logo.png';" onmouseout="this.src='logo/pansharpICCV2023_logo.png';" class="publogo"  width="300 px">
-            <p> 
-                <strong>
-                    <a href="">Learned Image Reasoning Prior Penetrates Deep Unfolding Network for Panchromatic and Multi-spectral Image Fusion</a>
-                </strong>
-		  <br> 
-		<em><b>ICCV, 2023 </b></em>
-                <br> 
-              Man Zhou,  Nansheng Zheng, Jie Huang, and <b>Chongyi Li</b>.
-                <br>
-                <span class="links">
-                    <a href="https://arxiv.org/pdf/2308.16083.pdf">PDF</a>| 
-		    <a href="https://github.com/manman1995/Awaresome-pansharpening">Project Page</a>| 	
-                    <a href="https://github.com/manman1995/Awaresome-pansharpening">Code</a>
-                </span>
-            </p>
-          </div>
-          <br>
-          <br>
-	 <br>
-	<br />
-	<br />
-	<br />
-
-	
 
 
-	<div class="publication">
-            <img src="logo/videodeblurICCV_logo.PNG" onmouseover="this.src='logo/videodeblurICCV_logo.PNG';" onmouseout="this.src='logo/videodeblurICCV_logo.PNG';" class="publogo"  width="300 px">
-            <p> 
-                <strong>
-                    <a href="">Exploring Temporal Frequency Spectrum in Deep Video Deblurring</a>
-                </strong>
-		  <br> 
-		<em><b>ICCV, 2023 </b></em>
-                <br> 
-             Qi Zhu, Man Zhou,  Nansheng Zheng, <b>Chongyi Li</b>, Jie Huang, and Feng Zhao.
-                <br>
-                <span class="links">
-                    <a href="">PDF</a>| 
-		    <a href="">Project Page</a>| 	
-                    <a href="">Code</a>
-                </span>
-            </p>
-          </div>
-          <br>
-          <br>
-	 <be>
-	<br>
-	 <br>
-	<br />
-	<br />
-	<br />
-	<br />
-	<br />
-
-
-	<div class="publication">
-            <img src="logo/lowlightICCV23_logo.PNG" onmouseover="this.src='logo/lowlightICCV23_logo.PNG';" onmouseout="this.src='logo/lowlightICCV23_logo.PNG';" class="publogo"  width="300 px">
-            <p> 
-                <strong>
-                    <a href="">Empowering Low-Light Image Enhancer through Customized Learnable Priors</a>
-                </strong>
-		  <br> 
-		<em><b>ICCV, 2023 </b></em>
-                <br> 
-              Nansheng Zheng, Yanmeng Dong, Xiangyu Rui, Jie Huang, <b>Chongyi Li</b>, Man Zhou, and Feng Zhao.
-                <br>
-                <span class="links">
-                    <a href="https://arxiv.org/abs/2309.01958">PDF</a>| 
-		    <a href="https://github.com/zheng980629/CUE">Project Page</a>| 	
-                    <a href="https://github.com/zheng980629/CUE">Code</a>
-                </span>
-            </p>
-          </div>
-          <br>
-          <br>
-	 <br>
-	<br>
-	<br />
-	<br />
-	<br />
-	<br />
--->
-	<div class="publication">
-            <img src="logo/IQAICCV_logo.PNG" onmouseover="this.src='logo/IQAICCV_logo.PNG';" onmouseout="this.src='logo/IQAICCV_logo.PNG';" class="publogo"  width="300 px">
-            <p> 
-                <strong>
-                    <a href="">Troubleshooting Ethnic Quality Bias with Curriculum Domain Adaptation for Face Image Quality Assessment</a>
-                </strong>
-		  <br> 
-		<em><b>ICCV, 2023 </b></em>
-                <br> 
-              Fuzhao Ou, Baoliang Chen, <b>Chongyi Li</b>, Shiqi Wang, and Sam Kwong.
-                <br>
-                <span class="links">
-                    <a href="">PDF</a>| 
-		    <a href="">Project Page</a>| 	
-                    <a href="">Code</a>
-                </span>
-            </p>
-          </div>
-          <br>
-          <br>
-	 <br>
-	<br />
-	<br />
-	<br />
 	
 	   <div class="publication">
             <img src="logo/Fourmer_logo.png" onmouseover="this.src='logo/Fourmer_logo.png';" onmouseout="this.src='logo/Fourmer_logo.png';" class="publogo"  width="300 px">
