--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ li, ul {font-weight: normal;}
 	
 	
 <p class="view"><a href="https://li-chongyi.github.io/">Homepage</a></p>
-<!--<<p class="view"><a href="sub_publication.html">Publications</a></p>-->
+<p class="view"><a href="sub_publication.html">Publications</a></p>
 <!--<p class="view"><a href="datasets.html">Datasets</a></p>-->
 
 	
@@ -92,32 +92,7 @@ li, ul {font-weight: normal;}
 
 <hr />
 </p>
- <!--
-	  <div class="publication">
-           <img src="./logo/IJCV.png" class="publogo" width="300 px">
-            <p> 
-                <strong>
-                    <a href="">IJCV Special Issue (Extend to 1 August 2023)</a>
-                </strong>
-		  <br> 
-		<em><b>Special Issue on Mobile Intelligent Photography and Imaging</b></em>
-                <br> 
-              Chongyi Li, Mauricio Delbracio, Jinwei Gu, and Chen Change Loy
-                <br>
-                <span class="links">
-		      <a href="https://www.springer.com/journal/11263/updates/23967724/">CFP</a>	
-		      
-                </span>
-            </p>
-          </div>
-          <br>
-          <br>
 
-	<br />
-	<br />
-	<br />
-	<br />
--->
 
 
 
