--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ li, ul {font-weight: normal;}
 <a id="Biography-page" class="anchor" href="#biography-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to Chongyi Li (李重仪)'s Homepage</h2>
 <div style="text-align: justify; display: block; margin-right: auto;">
 <p>
-<br><strong>2023/07 - </strong>I am a Full Professor at Nankai University, China.</br>
+<br><strong>2023/07 - </strong>I am a  Professor at Nankai University, China.</br>
 <br><strong>2021/10 - 2023/07</strong>, I was a Research Assistant Professor at the School of Computer Science and Engineering, Nanyang Technological University (NTU), Singapore.</br>
 <br><strong>2020/01 - 2021/10</strong>, I was a research fellow at the <a href="https://www.mmlab-ntu.com/"><font color="#1C86EE"> MMLab@NTU</font></a>, <a href="https://www.ntu.edu.sg/s-lab/our-people"><font color="#1C86EE"> S-Lab</font></a>, and worked with Dr.<a href="http://personal.ie.cuhk.edu.hk/~ccloy/index.html"><font color="#1C86EE"> Chen Change Loy</font></a>,  School of Computer Science and Engineering, Nanyang Technological University (NTU), Singapore.</br>
 <br><strong>2018/10 - 2020/01</strong>, I was a postdoctoral fellow and worked with Chair Prof. <a href="http://www.cs.cityu.edu.hk/~cssamk/research_group/index.html"><font color="#1C86EE">Sam Kwong</font></a> (IEEE Fellow), Department of Computer Science, City University of Hong Kong (CityU), Kowloon, Hong Kong.</br>
@@ -1137,9 +1137,6 @@ research and develop advanced deep learning algorithms for image and video enhan
 
 
 <br><strong>Associate Editor</strong></br>
-2024/01- : IEEE Transactions on Neural Networks and Learning Systems (IF: 10.4)</br>
-2023/01- : IEEE Transactions on Circuits and Systems for Video Technology (IF: 5.859)</br>
-2022/05- : IEEE Journal of Oceanic Engineering (IF: 3.554)</br>
 2022/01-2024/01 : Neurocomputing (IF: 5.719)</br>
 2021/01-2023/10: Springer Journal of Signal, Image and Video Processing (IF: 1.794)</br> 
 
