--- a/index.html
+++ b/index.html
@@ -83,12 +83,7 @@ li, ul {font-weight: normal;}
 <a id="Biography-page" class="anchor" href="#biography-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to Chongyi Li (李重仪)'s Homepage</h2>
 <div style="text-align: justify; display: block; margin-right: auto;">
 <p>
-<br><strong>2023/07 - </strong>I am a  Professor at Nankai University, China.</br>
-<br><strong>2021/10 - 2023/07</strong>, I was a Research Assistant Professor at the School of Computer Science and Engineering, Nanyang Technological University (NTU), Singapore.</br>
-<br><strong>2020/01 - 2021/10</strong>, I was a research fellow at the <a href="https://www.mmlab-ntu.com/"><font color="#1C86EE"> MMLab@NTU</font></a>, <a href="https://www.ntu.edu.sg/s-lab/our-people"><font color="#1C86EE"> S-Lab</font></a>, and worked with Dr.<a href="http://personal.ie.cuhk.edu.hk/~ccloy/index.html"><font color="#1C86EE"> Chen Change Loy</font></a>,  School of Computer Science and Engineering, Nanyang Technological University (NTU), Singapore.</br>
-<br><strong>2018/10 - 2020/01</strong>, I was a postdoctoral fellow and worked with Chair Prof. <a href="http://www.cs.cityu.edu.hk/~cssamk/research_group/index.html"><font color="#1C86EE">Sam Kwong</font></a> (IEEE Fellow), Department of Computer Science, City University of Hong Kong (CityU), Kowloon, Hong Kong.</br>
-<br><strong>2016/12 - 2017/12</strong>, I was a joint Ph.D. student at Research School of Engineering, Australian National University (ANU), Canberra, Australia, under the supervision of Prof. <a href="http://www.porikli.com/"><font color="#1C86EE">Fatih Porikli</font></a> (IEEE Fellow).</br>
-<br><strong>2014/09 - 2018/07</strong>, I was a Ph.D. student at School of Electrical and Information Engineering, Tianjin University (TJU), Tianjin, China, under the supervision of Prof. <a href="http://seea.tju.edu.cn/info/1014/1453.htm"><font color="#1C86EE">Jichang Guo</font></a>.</br>
+<br>I am a  Professor at Nankai University, China. I was a Research Assistant Professor at Nanyang Technological University (NTU) and also was a research fellow at NTU and CityU. I was a joint Ph.D. student at AN and TJU.
 
 <hr />
 </p>
