--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ li, ul {font-weight: normal;}
 <a id="Biography-page" class="anchor" href="#biography-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to Chongyi Li (李重仪)'s Homepage</h2>
 <div style="text-align: justify; display: block; margin-right: auto;">
 <p>
-<br>I am a  Professor at Nankai University, China. I was a Research Assistant Professor at NTU and also was a research fellow at NTU and CityU. I was a joint Ph.D. student at ANU and TJU.
+<br>I am a  Professor at Nankai University, China. I was a Research Assistant Professor at NTU and  was also a research fellow at NTU and CityU. I was a joint Ph.D. student at ANU and TJU.
 
 <hr />
 </p>
