--- a/sub_publication.html
+++ b/sub_publication.html
@@ -27,7 +27,8 @@
 <p>
 <small>📧lichongyi25 at gmail.com</small><br>
 <small>📧lichongyi at nankai.edu.cn</small><br><br>
-  
+<a href="https://pi-lab.xyz/index.html" target="_blank">[&Pi Research Group]</a>
+ 
 </p> <br>
 <p class="view"><a href="https://li-chongyi.github.io/">Homepage</a></p>
 <p class="view"><a href="sub_publication.html">Publications</a></p>
