--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@ li, ul {font-weight: normal;}
 	
 <!--<a href="https://github.com/Li-Chongyi/" target="_blank">[GitHub]</a>-->  
 <!--<a href="http://dblp.uni-trier.de/pers/hd/l/Li:Chongyi" target="_blank">[DBLP]</a>  <br>-->
-<a href="https://scholar.google.com/citations?user=1_I0P-AAAAAJ&hl=en" target="_blank">[Google Scholar]</a>
-<a href="https://pi-lab.xyz/index.html" target="_blank">[&Pi Research Group]</a>
+<a href="https://scholar.google.com/citations?user=1_I0P-AAAAAJ&hl=en" target="_blank">[Google Scholar]</a> <br>
+<a href="https://pi-lab.xyz/index.html" target="_blank">[&pi; Research Group]</a>
 </p> <br>
 	
 	
