--- a/index.html
+++ b/index.html
@@ -153,6 +153,32 @@ research and develop advanced deep learning algorithms for image and video enhan
         <br>
 
 	
+	<div class="publication">
+          <img src="logo//InclusionMatching.gif" onmouseover="this.src='logo//InclusionMatching.gif';" onmouseout="this.src='logo/InclusionMatching.gif';" class="publogo"  width="300 px">
+	<p>     
+	
+                <strong>
+                    <a href="">Learning Inclusion Matching for Animation Paint Bucket Colorization</a>
+                </strong>
+		  <br> 
+		<em><b>CVPR, 2024 <a href="" target="_blank"><font color="#ff0000"></font></a></b></em>
+                <br> 
+              Yuekun Dai, Shangchen Zhou, Qinyue Li, Chongyi Li, and Chen Change Loy.
+                <br>
+                <span class="links">
+                    <a href="https://arxiv.org/abs/2403.18342">PDF</a>| 
+		    <a href="https://ykdai.github.io/projects/InclusionMatching/">Project Page</a>| 	
+                    <a href="https://github.com/ykdai/BasicPBC/">Code</a>
+                </span>
+            </p>
+          </div>
+          <br>
+          <br>
+	<br>
+	<br />
+	<br />
+	<br />
+	
 	
 	<div class="publication">
          <video  muted="muted" width="300" class="publogo"   controls= "autoPlay" onended="this.currentTime = 0; this.play();" autoplay="" src="logo/backlit_demo.mp4"> <source src="logo/backlit_demo.mp4" type="video/mp4"></video>    
