--- a/index.html
+++ b/index.html
@@ -150,8 +150,34 @@ research and develop advanced deep learning algorithms for image and video enhan
 
 <div class="container">
 <h2><a id="reaserch-page" class="anchor" href="#reaserch-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Selected Publications:</h2>
-        <br>
-
+        <be>
+	
+	<div class="publication">
+          <img src="logo/lamp_logo.gif" onmouseover="this.src='logo//lamp_logo.gif';" onmouseout="this.src='logo/lamp_logo.gif';" class="publogo"  width="300 px">
+	<p>     
+	
+                <strong>
+                    <a href="">LAMP: Learn A Motion Pattern for Few-Shot Video Generation</a>
+                </strong>
+		  <br> 
+		<em><b>CVPR, 2024 <a href="" target="_blank"><font color="#ff0000"></font></a></b></em>
+                <br> 
+              Ruiqi Wu, Linagyu Chen, Tong Yang, Chunle Guo, Chongyi Li, Xiangyu Zhang.
+                <br>
+                <span class="links">
+                    <a href="https://arxiv.org/abs/2310.10769">PDF</a>| 
+		    <a href="https://rq-wu.github.io/projects/LAMP/index.html">Project Page</a>| 	
+                    <a href="https://github.com/RQ-Wu/LAMP">Code</a>
+                </span>
+            </p>
+          </div>
+          <br>
+          <br>
+	<br>
+	<br />
+	<br />
+	<br />
+	
 	
 	<div class="publication">
           <img src="logo//InclusionMatching.gif" onmouseover="this.src='logo//InclusionMatching.gif';" onmouseout="this.src='logo/InclusionMatching.gif';" class="publogo"  width="300 px">
