--- a/sub_publication.html
+++ b/sub_publication.html
@@ -52,8 +52,15 @@
 </ol> 
   
 
+<h4>
+<a id="publications-J-pages" class="anchor" href="#publications-J-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>2024:</h4>
 
- 
+<ol>
+<li> Learning Inclusion Matching for Animation Paint Bucket Colorization, <strong><ud2>IEEE Conference on Computer Vision and Pattern Recognition (CVPR)</ud2></strong>, 2024. <a href="" target="_blank"><font color="#1C86EE">[PDF-arXiv version]</font></a><a href="" target="_blank"><font color="#1C86EE">[Project]</font></a><font color="#ff0000"></font></li> 
+<li> LAMP: Learn A Motion Pattern for Few-Shot Video Generation, <strong><ud2>IEEE Conference on Computer Vision and Pattern Recognition (CVPR)</ud2></strong>, 2024. <a href="" target="_blank"><font color="#1C86EE">[PDF-arXiv version]</font></a><a href="" target="_blank"><font color="#1C86EE">[Project]</font></a><font color="#ff
+<li> Fourier Priors-Guided Diffusion for Zero-Shot Joint Low-Light Enhancement and Deblurring, <strong><ud2>IEEE Conference on Computer Vision and Pattern Recognition (CVPR)</ud2></strong>, 2024. <a href="" target="_blank"><font color="#1C86EE">[PDF-arXiv version]</font></a><a href="" target="_blank"><font color="#1C86EE">[Project]</font></a><font color="#ff
+<li> Flare7K++: Mixing Synthetic and Real Datasets for Nighttime Flare Removal and Beyond, <strong><ud2>IEEE Transactions on Pattern Analysis and Machine Intelligence</ud2></strong>, 2024. <a href="" target="_blank"><font color="#1C86EE">[PDF-arXiv version]</font></a><a href="" target="_blank"><font color="#1C86EE">[Project]</font></a><font color="#ff
+                                                                                                                                                                                                                                                                                                                                                         
 <h4>
 <a id="publications-J-pages" class="anchor" href="#publications-J-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>2023:</h4>
 
